TOMEE-281 remove endorsed lib for j7 even under windows
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1365906 13f79535-47bb-0310-9956-ffa450edef68